--- a/style.css
+++ b/style.css
@@ -1,17 +1,42 @@
 .body{
-    background-color: rgb(126, 5, 5);
+    background-color: rgb(92, 182, 209);
+    text-align: center;
 }
 .h1{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
 }
+.h2{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: center;
+}
+.h3{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: center;
+}
+.h4{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: center;
+}
+.h5{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: center;
+}
+.borda-texto {
+    border: 2px solid #2490cf; 
+    padding: 2px;
+    display: inline-block; 
+    background-color: rgba(255, 255, 255, 0.8); 
+}
+
 .p{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
     font-size: 150%;
 }
 .img{
-    width: 35%;
-    display: block;
-    margin: 0 auto;
+    width: 30%;
+    height: auto;
+    margin: 40 auto;
+    text-align: center;
 }
